style: ensure post content does not overlap the post datetime

--- a/src/app/components/submissions-list/SubmissionsList.css
+++ b/src/app/components/submissions-list/SubmissionsList.css
@@ -47,16 +47,25 @@
   display: none;
 }
 
+p.submission__content {
+  width: 75%;
+}
+
+.submission__meta {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
 .submission__author {
   font-weight: 600;
 }
 
-.submission__datetime {
-  position: absolute;
-  right: 0;
-  bottom: 0;
+p.submission__datetime {
   opacity: 0.75;
-  margin-right: 1rem;
+  align-self: center;
+  text-align: end;
 }
 
 @media (hover: hover) {
